Added HumanitarianAid Table. (ODAEU-230)

--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsInstitutionTypeOfAidDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsInstitutionTypeOfAidDashboards.html
@@ -50,6 +50,35 @@
                             </tbody>
                         </table>
                     </div>
+                    <div class="box">
+                        <div class="box-header">
+                            <h2>
+                                <div wicket:id="typeOfAidHumanitarianAidTableTitle"/>
+                            </h2>
+                        </div>
+                        <table wicket:id="typeOfAidHumanitarianAidTable">
+                            <thead>
+                            <tr>
+                                <th rowspan="2" class="ui-state-default">Institution</th>
+                                <th rowspan="2" class="ui-state-default"></th>
+                                <th class="ui-state-default" wicket:id="firstYear"></th>
+                                <th class="ui-state-default" wicket:id="secondYear"></th>
+                            </tr>
+                            <tr>
+                                <th wicket:id="currencyFirstYear">$</th>
+                                <th wicket:id="currencySecondYear">$</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr wicket:id="typeOfAidHumanitarianAidTableRows">
+                                <td wicket:id="col0" class="string">Institution</td>
+                                <td wicket:id="col1" class="string"></td>
+                                <td wicket:id="col2" class="numeric">$</td>
+                                <td wicket:id="col3" class="numeric">$</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
                 <br/><br/>
                 <div class="span6">
