--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsImplementationStatusDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsImplementationStatusDashboards.html
@@ -21,11 +21,46 @@
                 </div>
 
                 <div class="span6">
-
+                    <div class="box">
+                        <!--<div class="box-header">-->
+                            <!--<h2>-->
+                                <!--<div wicket:id="typeOfAidTableTitle"/>-->
+                            <!--</h2>-->
+                        <!--</div>-->
+                        <!--<table wicket:id="typeOfAidTable">-->
+                            <!--<thead>-->
+                            <!--<tr>-->
+                                <!--<th rowspan="2" class="ui-state-default">Institution</th>-->
+                                <!--<th rowspan="2" class="ui-state-default" wicket:id="typeOfFlow">Type of Aid</th>-->
+                                <!--<th class="ui-state-default" wicket:id="firstYear"></th>-->
+                                <!--<th class="ui-state-default" wicket:id="secondYear"></th>-->
+                            <!--</tr>-->
+                            <!--<tr>-->
+                                <!--<th wicket:id="currencyFirstYear">$</th>-->
+                                <!--<th wicket:id="currencySecondYear">$</th>-->
+                            <!--</tr>-->
+                            <!--</thead>-->
+                            <!--<tbody>-->
+                            <!--<tr wicket:id="typeOfAidTableRows">-->
+                                <!--<td wicket:id="col0" class="string">Institution</td>-->
+                                <!--<td wicket:id="col1" class="string">Type of Aid</td>-->
+                                <!--<td wicket:id="col2" class="numeric">$</td>-->
+                                <!--<td wicket:id="col3" class="numeric">$</td>-->
+                            <!--</tr>-->
+                            <!--</tbody>-->
+                        <!--</table>-->
+                    </div>
                 </div>
-
+                <br/><br/>
                 <div class="span6">
-
+                    <div class="box">
+                        <!--<div class="box-header">-->
+                            <!--<h2>-->
+                                <!--<div wicket:id="typeOfAidChartTitle"/>-->
+                            <!--</h2>-->
+                        <!--</div>-->
+                        <!--<div wicket:id="typeOfAidChart"/>-->
+                    </div>
                 </div>
             </div> <!-- /row -->
         </div> <!-- /container -->
