Implementation status dashboard. (ODAEU-230)

--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsImplementationStatusDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsImplementationStatusDashboards.html
@@ -20,7 +20,7 @@
                     <br/>
                 </div>
 
-                <div class="span6">
+                <div class="span8 offset2">
                     <div class="box">
                         <div class="box-header">
                             <h2>
@@ -54,14 +54,14 @@
                     </div>
                 </div>
                 <br/><br/>
-                <div class="span6">
+                <div class="span8 offset2">
                     <div class="box">
-                        <!--<div class="box-header">-->
-                            <!--<h2>-->
-                                <!--<div wicket:id="typeOfAidChartTitle"/>-->
-                            <!--</h2>-->
-                        <!--</div>-->
-                        <!--<div wicket:id="typeOfAidChart"/>-->
+                        <div class="box-header">
+                            <h2>
+                                <div wicket:id="implementationChartTitle"/>
+                            </h2>
+                        </div>
+                        <div wicket:id="implementationChart"/>
                     </div>
                 </div>
             </div> <!-- /row -->
