--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsPage.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsPage.html
@@ -22,8 +22,11 @@
     <div id="reports-page">
         <div class="container">
             <div class="row">
-                <div class="span12">
+                <div class="span6">
                     <h3 wicket:id="reportingCountry"/>
+                </div>
+                <div class="span6">
+                    <i class="oda-legend" wicket:id="legend"></i>
                 </div>
 
                 <div class="span7">
