Added second level dashboards. (ODAEU-230)

--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsCountrySectorDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsCountrySectorDashboards.html
@@ -48,7 +48,11 @@
                                 <tbody>
                                     <tr wicket:id="countryTableRows">
                                         <td wicket:id="col0" class="string">Region</td>
-                                        <td wicket:id="col1" class="string">Country</td>
+                                        <td>
+                                            <a href="#" wicket:id="link">
+                                                <span wicket:id="col1">Country</span>
+                                            </a>
+                                        </td>
                                         <td wicket:id="col2" class="numeric">Currency</td>
                                         <td wicket:id="col3" class="numeric">%</td>
                                         <td wicket:id="col4" class="numeric">Currency</td>
@@ -98,7 +102,11 @@
                                 <tbody>
                                 <tr wicket:id="sectorTableRows">
                                     <td wicket:id="col0" class="string">Main Sector</td>
-                                    <td wicket:id="col1" class="string">Sector</td>
+                                    <td>
+                                        <a href="#" wicket:id="link">
+                                            <span wicket:id="col1">Sector</span>
+                                        </a>
+                                    </td>
                                     <td wicket:id="col2" class="numeric">Currency</td>
                                     <td wicket:id="col3" class="numeric">%</td>
                                     <td wicket:id="col4" class="numeric">Currency</td>
