Added second level dashboards. (ODAEU-230)

--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsCountryInstitutionDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsCountryInstitutionDashboards.html
@@ -42,8 +42,17 @@
                             </thead>
                             <tbody>
                             <tr wicket:id="institutionTableRows">
-                                <td wicket:id="col0" class="string">Institution</td>
-                                <td wicket:id="col1" class="string">Country</td>
+                                <td>
+                                    <a href="#" wicket:id="link">
+                                        <span wicket:id="linkName">Institution</span>
+                                    </a>
+                                </td>
+                                <td>
+                                    <a href="#" wicket:id="link2">
+                                        <span wicket:id="linkName">Country</span>
+                                    </a>
+                                    <span wicket:id="total">TOTAL</span>
+                                </td>
                                 <td wicket:id="col2" class="numeric">$</td>
                                 <td wicket:id="col3" class="numeric">$</td>
                             </tr>
