--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsCountrySectorDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsCountrySectorDashboards.html
@@ -50,8 +50,9 @@
                                         <td wicket:id="col0" class="string">Region</td>
                                         <td>
                                             <a href="#" wicket:id="link">
-                                                <span wicket:id="col1">Country</span>
+                                                <span wicket:id="linkName">Country</span>
                                             </a>
+                                            <span wicket:id="total">TOTAL</span>
                                         </td>
                                         <td wicket:id="col2" class="numeric">Currency</td>
                                         <td wicket:id="col3" class="numeric">%</td>
@@ -104,8 +105,9 @@
                                     <td wicket:id="col0" class="string">Main Sector</td>
                                     <td>
                                         <a href="#" wicket:id="link">
-                                            <span wicket:id="col1">Sector</span>
+                                            <span wicket:id="linkName">Sector</span>
                                         </a>
+                                        <span wicket:id="total">TOTAL</span>
                                     </td>
                                     <td wicket:id="col2" class="numeric">Currency</td>
                                     <td wicket:id="col3" class="numeric">%</td>
