--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsInstitutionTypeOfAidDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsInstitutionTypeOfAidDashboards.html
@@ -42,7 +42,11 @@
                             </thead>
                             <tbody>
                             <tr wicket:id="typeOfAidTableRows">
-                                <td wicket:id="col0" class="string">Institution</td>
+                                <td>
+                                    <a href="#" wicket:id="link">
+                                        <span wicket:id="linkName">Institution</span>
+                                    </a>
+                                </td>
                                 <td wicket:id="col1" class="string">Type of Aid</td>
                                 <td wicket:id="col2" class="numeric">$</td>
                                 <td wicket:id="col3" class="numeric">$</td>
@@ -71,7 +75,11 @@
                             </thead>
                             <tbody>
                             <tr wicket:id="typeOfAidHumanitarianAidTableRows">
-                                <td wicket:id="col0" class="string">Institution</td>
+                                <td>
+                                    <a href="#" wicket:id="link">
+                                        <span wicket:id="linkName">Institution</span>
+                                    </a>
+                                </td>
                                 <td wicket:id="col1" class="string"></td>
                                 <td wicket:id="col2" class="numeric">$</td>
                                 <td wicket:id="col3" class="numeric">$</td>
