Update the way we get the page title for dashboards. (ODAEU-230)

--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HeaderFooter.html
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HeaderFooter.html
@@ -31,7 +31,7 @@
    
     <p/>
     <div align="center">
-   	<span class="transaction-title" wicket:id="pageTitle"/>
+   	    <h2 class="transaction-title" wicket:id="pageTitle"/>
    	</div>
    	<p/>
        <wicket:child/>
