Added new second level dashboards base class. (ODAEU-230)

--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsInstitutionTypeOfAidDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsInstitutionTypeOfAidDashboards.html
@@ -44,7 +44,12 @@
                                         <span wicket:id="linkName">Institution</span>
                                     </a>
                                 </td>
-                                <td wicket:id="col1" class="string">Type of Aid</td>
+                                <td>
+                                    <a href="#" wicket:id="link2">
+                                        <span wicket:id="linkName">Type of Aid</span>
+                                    </a>
+                                    <span wicket:id="total">TOTAL</span>
+                                </td>
                                 <td wicket:id="col2" class="numeric">$</td>
                                 <td wicket:id="col3" class="numeric">$</td>
                             </tr>
