--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsImplementationStatusDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsImplementationStatusDashboards.html
@@ -40,7 +40,12 @@
                             </thead>
                             <tbody>
                             <tr wicket:id="implementationTableRows">
-                                <td wicket:id="col0" class="string">Country</td>
+                                <td>
+                                    <a href="#" wicket:id="link">
+                                        <span wicket:id="linkName">Transaction title</span>
+                                    </a>
+                                    <span wicket:id="total">TOTAL</span>
+                                </td>
                                 <td wicket:id="col1" class="numeric">Currency</td>
                                 <td wicket:id="col2" class="numeric">%</td>
                                 <td wicket:id="col3" class="numeric">Currency</td>
