Make ParentSectors clickable instead of Sectors. (ODAEU-230)

--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsCountrySectorDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsCountrySectorDashboards.html
@@ -96,13 +96,12 @@
                                 </thead>
                                 <tbody>
                                 <tr wicket:id="sectorTableRows">
-                                    <td wicket:id="col0" class="string">Main Sector</td>
                                     <td>
                                         <a href="#" wicket:id="link">
-                                            <span wicket:id="linkName">Sector</span>
+                                            <span wicket:id="linkName">Main Sector</span>
                                         </a>
-                                        <span wicket:id="total">TOTAL</span>
                                     </td>
+                                    <td wicket:id="col1" class="string">Sector</td>
                                     <td wicket:id="col2" class="numeric">Currency</td>
                                     <td wicket:id="col3" class="numeric">%</td>
                                     <td wicket:id="col4" class="numeric">Currency</td>
