--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/InstitutionDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/InstitutionDashboards.html
@@ -16,16 +16,33 @@
         <div class="container">
             <div class="row">
                 <br/>
-
-                <div class="span6">
-                    <div class="box">
-
-                    </div>
+                <div class="span7">
+                    <h3 wicket:id="institution"/>
                 </div>
 
+                <div class="span8 offset 2">
+                    <div class="box">
+                        [table]
+                    </div>
+                </div>
                 <div class="span6">
                     <div class="box">
-
+                        <div class="box-header">
+                            <h2>
+                                <div wicket:id="institutionPieChartTitle"/>
+                            </h2>
+                        </div>
+                        <div wicket:id="institutionPieChart"/>
+                    </div>
+                </div>
+                <div class="span6">
+                    <div class="box">
+                        <div class="box-header">
+                            <h2>
+                                <div wicket:id="institutionBarChartTitle"/>
+                            </h2>
+                        </div>
+                        <div wicket:id="institutionBarChart"/>
                     </div>
                 </div>
             </div> <!-- /row -->
