--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/CountryDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/CountryDashboards.html
@@ -16,16 +16,23 @@
         <div class="container">
             <div class="row">
                 <br/>
-
+                <div class="span7">
+                    <h3 wicket:id="country"/>
+                </div>
                 <div class="span6">
                     <div class="box">
-
+                        [table]
                     </div>
                 </div>
 
                 <div class="span6">
                     <div class="box">
-
+                        <div class="box-header">
+                            <h2>
+                                <div wicket:id="countryChartTitle"/>
+                            </h2>
+                        </div>
+                        <div wicket:id="countryChart"/>
                     </div>
                 </div>
             </div> <!-- /row -->
