ODAEU-163 - refactored printable scripts and pdf output

--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsPage.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsPage.html
@@ -19,7 +19,7 @@
 </wicket:head>
 <body>
 <wicket:extend>
-    <div id="reports-page">
+    <div id="printable-container">
         <div class="container">
             <div class="row">
                 <div class="span6">
@@ -139,7 +139,7 @@
             </div> <!-- /row -->
 
         </div> <!-- /container -->
-    </div> <!-- /reports-page -->
+    </div> <!-- /printable-container -->
 
     <div class="container">
         <div class="row">
