--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/TypeOfAidDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/TypeOfAidDashboards.html
@@ -19,11 +19,6 @@
                 <div class="span7">
                     <h3 wicket:id="typeOfAid"/>
                 </div>
-                <div class="span8 offset 2">
-                    <div class="box">
-                        [table]
-                    </div>
-                </div>
                 <div class="span6">
                     <div class="box">
                         <div class="box-header">
@@ -42,6 +37,44 @@
                             </h2>
                         </div>
                         <div wicket:id="typeOfAidBarChart"/>
+                    </div>
+                </div>
+                <br/>
+                <div class="span10 offset1">
+                    <div class="box">
+                        <div class="box-header">
+                            <h2>
+                                <div wicket:id="typeOfAidTableListTitle"/>
+                            </h2>
+                        </div>
+                        <table wicket:id="typeOfAidTableList">
+                            <thead>
+                            <tr>
+                                <th class="ui-state-default">Transaction title</th>
+                                <th class="ui-state-default">Total budget</th>
+                                <th class="ui-state-default" wicket:id="firstYear"></th>
+                                <th class="ui-state-default">Sector</th>
+                                <th class="ui-state-default">Country</th>
+                                <th class="ui-state-default">Institution</th>
+                                <th class="ui-state-default">Implementing Channel</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr wicket:id="typeOfAidTableListRows">
+                                <td>
+                                    <a href="#" wicket:id="link">
+                                        <span wicket:id="linkName">Transaction title</span>
+                                    </a>
+                                </td>
+                                <td wicket:id="col1" class="numeric">total budget</td>
+                                <td wicket:id="col2" class="numeric">disbursement</td>
+                                <td wicket:id="col3" class="string">sector</td>
+                                <td wicket:id="col4" class="string">country</td>
+                                <td wicket:id="col5" class="string">institution</td>
+                                <td wicket:id="col6" class="string">channel</td>
+                            </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div> <!-- /row -->
