--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ChannelDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ChannelDashboards.html
@@ -19,27 +19,6 @@
                 <div class="span7">
                     <h3 wicket:id="channel"/>
                 </div>
-                <div class="span6">
-                    <div class="box">
-                        <div class="box-header">
-                            <h2>
-                                <div wicket:id="channelPieChartTitle"/>
-                            </h2>
-                        </div>
-                        <div wicket:id="channelPieChart"/>
-                    </div>
-                </div>
-                <div class="span6">
-                    <div class="box">
-                        <div class="box-header">
-                            <h2>
-                                <div wicket:id="channelBarChartTitle"/>
-                            </h2>
-                        </div>
-                        <div wicket:id="channelBarChart"/>
-                    </div>
-                </div>
-                <br/>
                 <div class="span10 offset1">
                     <div class="box">
                         <div class="box-header">
@@ -73,6 +52,17 @@
                             </tr>
                             </tbody>
                         </table>
+                    </div>
+                </div>
+                <br/>
+                <div class="span10 offset1">
+                    <div class="box">
+                        <div class="box-header">
+                            <h2>
+                                <div wicket:id="channelBarChartTitle"/>
+                            </h2>
+                        </div>
+                        <div wicket:id="channelBarChart"/>
                     </div>
                 </div>
             </div> <!-- /row -->
