Reference to a country or any other entry that has a table somewhere that entry should be clickable. (ODAEU-257)

--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/SectorDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/SectorDashboards.html
@@ -96,9 +96,21 @@
                                 </td>
                                 <td wicket:id="col1" class="numeric">total budget</td>
                                 <td wicket:id="col2" class="numeric">disbursement</td>
-                                <td wicket:id="col3" class="string">country</td>
-                                <td wicket:id="col4" class="string">institution</td>
-                                <td wicket:id="col5" class="string">channel</td>
+                                <td>
+                                    <a href="#" wicket:id="col3">
+                                        <span wicket:id="linkName">country</span>
+                                    </a>
+                                </td>
+                                <td>
+                                    <a href="#" wicket:id="col4">
+                                        <span wicket:id="linkName">institution</span>
+                                    </a>
+                                </td>
+                                <td>
+                                    <a href="#" wicket:id="col5">
+                                        <span wicket:id="linkName">channel</span>
+                                    </a>
+                                </td>
                             </tr>
                             </tbody>
                         </table>
