--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ChannelDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ChannelDashboards.html
@@ -47,8 +47,16 @@
                                 <td wicket:id="col1" class="numeric">total budget</td>
                                 <td wicket:id="col2" class="numeric">disbursement</td>
                                 <td wicket:id="col3" class="string">sector</td>
-                                <td wicket:id="col4" class="string">country</td>
-                                <td wicket:id="col5" class="string">institution</td>
+                                <td>
+                                    <a href="#" wicket:id="col4">
+                                        <span wicket:id="linkName">country</span>
+                                    </a>
+                                </td>
+                                <td>
+                                    <a href="#" wicket:id="col5">
+                                        <span wicket:id="linkName">institution</span>
+                                    </a>
+                                </td>
                             </tr>
                             </tbody>
                         </table>
