--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/InstitutionDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/InstitutionDashboards.html
@@ -118,6 +118,17 @@
                         </table>
                     </div>
                 </div>
+                <br/>
+                <div class="span8 offset2">
+                    <div class="box">
+                        <div class="box-header">
+                            <h2>
+                                <div wicket:id="biMultilateralTitle"/>
+                            </h2>
+                        </div>
+                        <div wicket:id="biMultilateralChart"/>
+                    </div>
+                </div>
             </div> <!-- /row -->
         </div> <!-- /container -->
     </div> <!-- /reports-page -->
