Resolved the problem with downloading the reports. Added the page title to the downloaded PDF file. (ODAEU-257)

--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ChannelDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ChannelDashboards.html
@@ -12,7 +12,7 @@
 </wicket:head>
 <body>
 <wicket:extend>
-    <div id="reports-page">
+    <div id="printable-container">
         <div class="container">
             <div class="row">
                 <br/>
@@ -75,7 +75,7 @@
                 </div>
             </div> <!-- /row -->
         </div> <!-- /container -->
-    </div> <!-- /reports-page -->
+    </div> <!-- /printable-container -->
 
     <div class="container">
         <div class="row">
