--- a/eudevfin/saikuui/src/main/webapp/saikuui/index.html
+++ b/eudevfin/saikuui/src/main/webapp/saikuui/index.html
@@ -132,7 +132,7 @@
             <script type="text/javascript" src="js/saiku/plugins/CCC_Chart/ChartEditor.js"></script>
             -->
             <script type="text/javascript" src="js/saiku/plugins/CCC_Chart/plugin.js"></script>
-
+			<script type="text/javascript" src="js/saiku/plugins/Currency/plugin.js" ></script>
         <script type="text/javascript" src="js/ace/ace.js" charset="utf-8"></script>
 
 
